Restructure the Pug folder

--- a/views/client/pages/topics/index.pug
+++ b/views/client/pages/topics/index.pug
@@ -1,6 +1,7 @@
-doctype html 
-html 
-    head
-        title Trang Chủ Đề Bài Hát 
-    body 
-        h1 Trang Chủ Đề Bài Hát
+extends ../../layouts/default.pug
+include ../../mixins/box-head.pug
+block main
+    .container.my-3
+        .row
+            .col-12
+                +box-head(pageTitle)
