--- a/views/client/partial/header.pug
+++ b/views/client/partial/header.pug
@@ -1,1 +1,14 @@
-header Header 
+header.header
+    .container 
+        .row.align-items-center
+            .col-3 
+                .inner-logo
+                    a(href="/")
+                        img(src="/images/nhac.svg" ,alt="logo")
+            .col-9
+                .inner-menu
+                    ul 
+                        li
+                            a(href="/") Trang Chủ
+                        li 
+                            a(href="/topics") Chủ Đề
