--- a/views/client/pages/songs/detail.pug
+++ b/views/client/pages/songs/detail.pug
@@ -18,7 +18,7 @@ block main
                         div(class="inner-action1 inner-like active" button-like = song.id)
                             <i class= "fa-regular fa-thumbs-up"></i>  
                             span #{song.like} Thích
-                        div(class="inner-action inner heart")
+                        div(class="inner-action inner-heart" + (song.isFavoriteSong ? "active" : "") button-favorite = song.id)
                             <i class= "fa-regular fa-heart"></i> Bài Hát Yêu Thích
 
                     .inner-play
