--- a/views/client/partial/header.pug
+++ b/views/client/partial/header.pug
@@ -9,6 +9,8 @@ header.header
                 .inner-menu
                     ul 
                         li
-                            a(href="/") Trang Chủ
+                            a(href="/") <i class="fa-solid fa-house" ></i> Trang Chủ
                         li 
-                            a(href="/topics") Chủ Đề
+                            a(href="/topics") <i class="fa-solid fa-music" ></i> Chủ Đề
+                        li 
+                            a(href="/favorite-songs") <i class="fa-solid fa-heart" ></i> Bài Hát Yêu Thích
