--- a/views/client/partial/header.pug
+++ b/views/client/partial/header.pug
@@ -5,7 +5,27 @@ header.header
                 .inner-logo
                     a(href="/")
                         img(src="/images/nhac.svg" ,alt="logo")
-            .col-9
+            
+            .col-5
+                .box-search
+                    form(
+                        action="/search/result"
+                        method= "Get"
+                    )
+                        div(class="form-group d-flex mb-0")
+                            input(
+                                type="text"
+                                placeholder="Nhập Từ Khóa"
+                                class="form-control"
+                                name="keyword"
+                                value=keyword
+                            )
+                            button(
+                                type="submit"
+                                class="btn btn-primary"
+                            ) Tìm
+
+            .col-4
                 .inner-menu
                     ul 
                         li
