--- a/views/admin/pages/songs/create.pug
+++ b/views/admin/pages/songs/create.pug
@@ -57,6 +57,15 @@ block main
                 upload-image-preview
             )
         div(class="form-group")
+            label(for="audio") File Âm Thanh
+            input(
+                type="file"
+                class="form-control-file"
+                id="audio"
+                name="audio"
+                accept="audio/*"
+            ) 
+        div(class="form-group")
             label(for="desc") Mô Tả
             textarea(
                 type="text"
