--- a/views/admin/pages/songs/create.pug
+++ b/views/admin/pages/songs/create.pug
@@ -56,7 +56,10 @@ block main
                 class="image-preview"
                 upload-image-preview
             )
-        div(class="form-group")
+        div(
+            class="form-group"
+            upload-audio
+        )
             label(for="audio") File Âm Thanh
             input(
                 type="file"
@@ -64,7 +67,10 @@ block main
                 id="audio"
                 name="audio"
                 accept="audio/*"
-            ) 
+                upload-audio-input
+            )
+            audio(controls upload-audio-play)
+                source(src="") 
         div(class="form-group")
             label(for="desc") Mô Tả
             textarea(
