--- a/views/admin/pages/singers/index.pug
+++ b/views/admin/pages/singers/index.pug
@@ -10,7 +10,7 @@ block main
 
                 .col-4.text-right
                     a(
-                        href=`/${prefixAdmin}/topics/create`
+                        href=`/${prefixAdmin}/singers/create`
                         class="btn btn-outline-success"
                     ) + Thêm Mới
             table(
@@ -19,14 +19,15 @@ block main
                 thead 
                     tr 
                         th STT 
-                        th Hình Ảnh 
-                        th Tiêu Đề
+                        th Tên Ca Sĩ
+                        th Hình Ảnh
                         th Trạng Thái 
                         th Hành Động
                 tbody
-                    each item, index in topics
+                    each item, index in singer
                         tr
                             td #{index + 1}
+                            td #{item.fullName}
                             td
                                 img(
                                     src=item.avatar
@@ -34,7 +35,6 @@ block main
                                     width="100px"
                                     height="auto"
                                 )
-                            td #{item.title}
                             td
                                 if (item.status == "active")
                                     a(
@@ -55,20 +55,20 @@ block main
                             td
                                 a(
                                     class="btn btn-secondary btn-sm"
-                                    href=`/${prefixAdmin}/topics/detail/${item.id}`
+                                    href=`/${prefixAdmin}/singers/detail/${item.id}`
                                 ) Chi Tiết
                                 a(
                                     class="btn btn-warning btn-sm ml-1"
-                                    href=`/${prefixAdmin}/topics/edit/${item.id}`
+                                    href=`/${prefixAdmin}/singers/edit/${item.id}`
                                 ) Sửa 
                                 a(
                                     class="btn btn-danger btn-sm ml-1"
-                                    href=`/${prefixAdmin}/topics/delete/${item.id}`
+                                    href=`/${prefixAdmin}/singers/delete/${item.id}`
                                 ) Xóa 
     form(
         action = ""
         method = "POST"
         id = "form-change-status"
-        data-path=`/${prefixAdmin}/topics/change-status`
+        data-path=`/${prefixAdmin}/singers/change-status`
     )
     script(src="/admin/js/script.js")
