--- a/views/admin/partial/header.pug
+++ b/views/admin/partial/header.pug
@@ -3,14 +3,14 @@ header.header
         .row.align-items-center
             .col-3
                 .inner-logo
-                    a(href=`${prefixadmin}/dashboard`) ADMIN
+                    a(href=`/${prefixAdmin}/dashboard`) ADMIN
             .col-9
                 div(class="text-right")
                     a(
-                        href=`/${prefixadmin}/my-accounts`
+                        href=`${prefixAdmin}/my-accounts`
                         class="btn btn-primary btn-sm mr-2"
                     ) Le Van A
                     a(
-                        href=`/${prefixadmin}/auth/logout`
+                        href=`/${prefixAdmin}/auth/logout`
                         class="btn btn-danger btn-sm"
                     ) Đăng Xuất
