--- a/views/admin/pages/account/index.pug
+++ b/views/admin/pages/account/index.pug
@@ -1,18 +1,71 @@
 extends ../../layouts/default.pug
-
 block main
     h1(class="mb-4") Danh Sách Tài Khoản
 
-        .card.mb-3
-            .card-header Danh Sách
-            .card-body
-                .row
-                    .col-8
-                    .col-4.text-right
-                        a(
-                            href=`/${prefixAdmin}/accounts/create`
-                            class="btn btn-outline-success"
-                        ) + Thêm Mới
+    .card.mb-3
+        .card-header Danh Sách
+        .card-body
+            .row
+                .col-8
+                .col-4.text-right
+                    a(
+                        href=`/${prefixAdmin}/accounts/create`
+                        class="btn btn-outline-success"
+                    ) + Thêm Mới
+                table(
+                    class="table table-hover table-sm"
+                )
+                    thead
+                        tr 
+                            th STT
+                            th Avatar
+                            th Họ Tên
+                            th Email
+                            th Trạng Thái
+                            th Hành Động
+                    tbody
+                        each item , index in account
+                            tr
+                                td #{index+1}
+                                td
+                                    img(
+                                        src= item.avatar
+                                        width="100px"
+                                        height="auto"
+                                    )
+                                td #{item.fullName} 
+                                td #{item.email}
+                                td
+                                    if (item.status === "active")
+                                        a(
+                                            href="javascript:;"
+                                            class="badge badge-success"
+                                            data-status="active"
+                                            data-id=item.id
+                                            button-change-status
+                                        ) Hoạt Động
+                                    else 
+                                        a(
+                                            href="javascript:;"
+                                            class="badge badge-danger"
+                                            data-status="inactive"
+                                            data-id=item.id
+                                            button-change-status
+                                        ) Dừng Hoạt Động
+                                td 
+                                    a(
+                                        class= "btn btn-secondary btn-sm"
+                                        href= `/${prefixAdmin}/accounts/detail/${item.id}`
+                                    ) Chi Tiết
+                                    a(
+                                        class= "btn btn-warning btn-sm"
+                                        href= `/${prefixAdmin}/accounts/edit/${item.id}`
+                                    ) Sửa
+                                    button(
+                                        class="btn btn-danger btn-sm m1-1"
+                                        button-delete-account 
+                                        data-id=item.id
+                                    ) Xóa
         form(
             action="" 
             method="POST"
