--- a/views/admin/pages/account/index.pug
+++ b/views/admin/pages/account/index.pug
@@ -70,6 +70,6 @@ block main
             action="" 
             method="POST"
             id="form-change-status"
-            data-path=`${prefixAdmin}/accounts/change-status`
+            data-path=`/${prefixAdmin}/accounts/change-status`
         )
         script(src="/admin/js/account.js") 
