--- a/public/admin/CSS/style.css
+++ b/public/admin/CSS/style.css
@@ -52,7 +52,7 @@ h1 {
 }
 
 /* show alert */
-[show-alert] {
+/* [show-alert] {
     position: fixed;
     top: 70;
     right: 15;
@@ -87,6 +87,48 @@ h1 {
     border-radius: 50%;
     cursor: pointer;
     ;
+} */
+.alert {
+    padding: 10px 20px;
+    margin: 15px 0;
+    border-radius: 5px;
+    position: relative;
+    font-weight: bold;
+    animation: fadeOut 5s forwards;
+    transition: opacity 0.5s ease;
+}
+
+.success {
+    background-color: #d4edda;
+    color: #155724;
+}
+
+.error {
+    background-color: #f8d7da;
+    color: #721c24;
+}
+
+.close-alert {
+    position: absolute;
+    right: 10px;
+    top: 5px;
+    cursor: pointer;
+    font-size: 18px;
+}
+
+@keyframes fadeOut {
+    0% {
+        opacity: 1;
+    }
+
+    90% {
+        opacity: 1;
+    }
+
+    100% {
+        opacity: 0;
+        display: none;
+    }
 }
 
 .image-preview {
