--- a/views/admin/pages/auth/login.pug
+++ b/views/admin/pages/auth/login.pug
@@ -1,7 +1,8 @@
 extends ../../layouts/auth.pug
 include ../../mixins/alert.pug
 block main
-    +alert-error(errorMessage)
+    if errorMessage
+        +alert-error(errorMessage)
     .container.my-5
         .row.justify-content-center
             .col-8
